; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/52xx/extr_mpc52xx_common.c_mpc52xx_get_xtal_freq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/52xx/extr_mpc52xx_common.c_mpc52xx_get_xtal_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.device_node = type { i32 }

@mpc52xx_cdm = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpc52xx_get_xtal_freq(%struct.device_node* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.device_node* %0, %struct.device_node** %3, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @mpc52xx_cdm, align 8
  %7 = icmp ne %struct.TYPE_2__* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %49

9:                                                ; preds = %1
  %10 = load %struct.device_node*, %struct.device_node** %3, align 8
  %11 = call i32 @mpc5xxx_get_bus_frequency(%struct.device_node* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %49

15:                                               ; preds = %9
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @mpc52xx_cdm, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = call i32 @in_8(i32* %17)
  %19 = and i32 %18, 1
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load i32, i32* %5, align 4
  %23 = mul i32 %22, 2
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %21, %15
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @mpc52xx_cdm, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = call i32 @in_be32(i32* %26)
  store i32 %27, i32* %4, align 4
  %28 = load i32, i32* %4, align 4
  %29 = and i32 %28, 32
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %24
  %32 = load i32, i32* %5, align 4
  %33 = mul i32 %32, 8
  store i32 %33, i32* %5, align 4
  br label %37

34:                                               ; preds = %24
  %35 = load i32, i32* %5, align 4
  %36 = mul i32 %35, 4
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %34, %31
  %38 = load i32, i32* %4, align 4
  %39 = and i32 %38, 64
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %37
  %42 = load i32, i32* %5, align 4
  %43 = udiv i32 %42, 12
  store i32 %43, i32* %5, align 4
  br label %47

44:                                               ; preds = %37
  %45 = load i32, i32* %5, align 4
  %46 = udiv i32 %45, 16
  store i32 %46, i32* %5, align 4
  br label %47

47:                                               ; preds = %44, %41
  %48 = load i32, i32* %5, align 4
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %47, %14, %8
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @mpc5xxx_get_bus_frequency(%struct.device_node*) #1

declare dso_local i32 @in_8(i32*) #1

declare dso_local i32 @in_be32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
